drm_util: correct initial value of |display_id|

This CL corrects the initialization value of |display_id| from -1
(which is bad) to what it used to have before the CL reviewed in

https://chromium-review.googlesource.com/c/chromium/src/+/970085/23/ui/ozone/platform/drm/common/drm_util.cc#b385

The -1 it breaks (at least) amd64-generic-tot-chromium-pfq-informational
(see bug).

TBR=dnicoara@chromium.org since it's a trivial fix and has been verified.

Bug: 832136
Change-Id: I3c1db741979f20877483880b87f2d052b2a02cf9
Reviewed-on: https://chromium-review.googlesource.com/1010517
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Reviewed-by: Daniel Nicoara <dnicoara@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550495}
Former-commit-id: 8f8853c2b80cc058545b60afd14f32b45dc69e9a